# AIS2202_State_estimation_Gr3

./: .gitignore  CMakeLists.txt  README.md  marixcalculatiion.asv  marixcalculatiion.m  vcpkg.json
Data_parsing/: BaselineAcc.hpp  Baseline_orientations.hpp  Baseline_wrench.hpp  CMakeLists.txt  Calibration.hpp  DataStore.cpp  DataStore.hpp  Vibration_Acc.hpp  Vibration_orientation.hpp  Vibrations_wrench.hpp  main.cpp
estimation/: CMakeLists.txt  kalman_filter.cpp
estimation/include/estimation/: kalman_filter.h
kyb_data/: 1-F.csv  1-FTS.csv  1-FTS_unbias.csv  1-Zc.csv  1-Zc_unbias.csv  2-FTA_phase.csv  2-FTS.csv  2-FTS_unbias.csv  2-Zc.csv  2-Zc_unbias.csv  3-FTA 1.csv  3-FTA 2.csv  3-FTA.csv  3-FTA_SDK_03.csv  3-FTA_original_value.csv  3-FTS.csv  3-FTS_unbias.csv  3-Zc.csv  3-Zc_unbias.csv  Calibration_phase.csv  FTA_phase 1.csv  datakyb.ipynb  f_t_a_phase.csv  force_tourqe_acc.csv
kyb_data/Data/: 1-T.csv  2-F.csv  2-T.csv  3-Force.csv  3-T.csv
kyb_data/Old data/: 2-FTA_phase 1.csv  3-FTA 1.csv  3-FTA 2.csv  3-FTA.csv  3-FTA_SDK_03.csv  3-FTA_original_value.csv  Calibration_phase.csv  FTA_phase 1.csv  f_t_a_phase.csv  force_tourqe.csv
kyb_varians/: Varianse_kyb.ipynb
parameter_estimation/: CMakeLists.txt  main.cpp
parameter_estimation/include/: Param_calc.h  param_calc.h
state_estimation/: CMakeLists.txt  SensorFusion.cpp  SensorFusion.hpp  main.cpp
